  * Remove .pgp (v3 pgp key) keyrings from config.
  * Update guest welcome template.
  * ud-gpgimport: handle guest keyrings.
  * ud-mailgate:
    - Make updating of gender actually work.
    - Do not mess with sudo passwords if nothing changed.
  * templates/change-reply: say a word about subjects in mail to admin@db.
  * move gpgwrapper to unmaintained/ - it is now using obsolete interfaces.

 -- Peter Palfrader <weasel@debian.org>  Sat, 21 May 2011 14:49:52 +0200

userdir-ldap (0.3.78) unstable; urgency=low

  * Start refactoring ud-generate:
    - If environment variables UD_CREDENTIALS, UD_GENERATEDIR, UD_HMAC_KEY
      are set, use their respective value instead of the default.  This
      makes it possible to run ud-generate as a non-privileged user for
      testing purposes.
    - Start wrapping ldap search results in classes. For now we have done
      this with just an ldap account.
    - Also got rid of the global PasswdAttrs variable.  Now functions
      get the account list (now a list of Account classes instead of
      ldap result array of tuples of hashes) passed to them like well-behaved
      functions.
  * userdir-ldap-slapd.conf: Fix ACL rule for keyring maintainers
    (we want group=..., not dn=...).
  * Add ud-krb-reset, and make ud-mailgate call it when
    receiving a mail at chpasswd@ saying
    'Please change my Kerberos password'.
  * ud-generate: Add an extra output file called all-users.json that
    can be used on one of the AFS hosts to create afs users.

 -- Peter Palfrader <weasel@debian.org>  Mon, 13 Sep 2010 19:08:34 +0200

userdir-ldap (0.3.77) unstable; urgency=low

  [ Peter Palfrader ]
  * ud-mailgate: Remove a global declaration after a variable has
    already been assigned globally.
  * ud-mailgate: We use the result of the pgp check for quite a long
    time in the main program.  Give it its own variable instead of
    using Res which was overwritten a bit later.  Also make a new